--- a/RoutereetView.csproj
+++ b/RoutereetView.csproj
@@ -46,8 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AltitudeView.cs" />
     <Compile Include="Coordinate.cs" />
     <Compile Include="CoordinateList.cs" />
+    <Compile Include="GpsCalculator.cs" />
+    <Compile Include="Http.cs" />
+    <Compile Include="HttpImpl.cs" />
     <Compile Include="KmlLoader.cs" />
     <Compile Include="KmlLoaderImpl.cs" />
     <Compile Include="RoutereetView.cs">
@@ -58,6 +62,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StreetViewAPI.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
