--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -53,6 +53,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CoordinateTest.cs" />
+    <Compile Include="GpsCalculatorTest.cs" />
     <Compile Include="KmlLoaderTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CoordinateListTest.cs" />
