--- a/RoutereetView.csproj
+++ b/RoutereetView.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AltitudeView.cs" />
+    <Compile Include="APIKey.cs" />
     <Compile Include="Coordinate.cs" />
     <Compile Include="CoordinateList.cs" />
     <Compile Include="GpsCalculator.cs" />
